# OpenLightShadow

./: .gitignore  CMakeLists.txt
OpenLightShadow/: Application.cpp  Application.h  CMakeLists.txt  OLS.cpp  OLS.h  opaque.fs.glsl
OpenLightShadow/shaders/: Cube.fs.glsl  Cube.vs.glsl  RenderTexture.vs.glsl  opaque.fs.glsl  opaque.vs.glsl
